<resources>

    <string name="app_name">Room Search</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_room_search">Room Search</string>
    <string name="weiter">Weiter</string>
    <string name="stundenplan">Stundenplan</string>
    <string name="standort">Dein Standort</string>
    <string name="mon">Montag</string>
    <string name="die">Dienstag</string>
    <string name="mit">Mittwoch</string>
    <string name="don">Donnerstag</string>
    <string name="fre">Freitag</string>
    <string name="finden">Raum finden</string>
    <string name="test">Standort wird ermittelt...</string>
    <string name="vorlesung">Raum und Vorlesung</string>
    <string name="ziel">Zielraum</string>
    <string name="eingabe_button">Senden</string>
    <string name="gast">Gast</string>
    <string name="einleitung_login">Willkommen bei Room Search</string>
    <string name="hrz_text">Benutzername</string>
    <string name="passwort">Passwort</string>
    <string name="lädt">lädt...</string>
    <string name="nichtvorhanden">Noch nicht vorhanden.</string>
    <string name="w_haus">Zu welchem Haus willst du?</string>
    <string name="raumnummer">Raumnummer</string>
    <string name="suchen">Suchen</string>
    <string name="raumnummerinfo">Bitte gebe nur die Raumnummer ohne den Buchstaben an. Wenn du auf Senden drückst wird dein gesuchter Raum angezeigt in dem gewünschten Gebäude.</string>
    <string name="en_welcomeRS">Welcome by Room Search</string>
    <string name="view_raum">Vorlesung</string>
    <string name="button_leer">num</string>
    <string name="_placeholder">-</string>
    <string name="einstellung">Einstellungen</string>
    <string name="qr_code">QR-Code</string>
    <string name="nav_anweisung1">Vorlesung auswählen - kurz drücken</string>
    <string name="nav_anweisung2">Vorlesung Informationen - lange drücken</string>
    <string name="kam_sicht">Kamera Ansicht</string>
    <string name="campus_position">Campus</string>
    <string name="standort_campus">Standort Campus</string>
    <string name="raum_informationen">Rauminfo</string>
    <string name="kamera">Kamera</string>
    <string name="abstand">Abstand</string>
    <string name="raum_plan">Raumplan</string>
    <string name="login">Login</string>
    <string name="qr_scanner">Code Scanner</string>
    <string name="leer">---</string>
    <string name="option_1">Rauminformation</string>
    <string name="option_2">Raum Foto</string>
    <string name="option_3">zur Website</string>
    <string name="option_4">Raumbelegung</string>
    <string name="login_formular">Login Formular</string>
    <string name="profil_erstellen">Profil erstellen</string>
    <string name="start_info_1">Besitzt du bereits ein Profil, dann gebe deine Daten ein und drücke auf Login.</string>
    <string name="start_info_2">Bist du ein Besucher und willst nur einen Raum finden, drücke Gast.</string>
    <string name="start_info_3">Möchtest du dir ein Profil anlegen, dann drücke bite Profil erstellen.</string>
    <string name="auswahl_menu">Auswahl Menü</string>
    <string name="mein_vorlesungsplan">Mein Vorlesungsplan</string>
    <string name="raum_suchen">Raum suchen</string>
    <string name="mein_standort">Mein Standort</string>
    <string name="campusplan">Campusplan drücke auf die Fläche</string>
    <string name="zum_plan">Zum Plan</string>
    <string name="spracheingabe">Spracheingabe</string>
    <string name="map_position">Karte</string>
    <string name="abmelden">Abmelden</string>
    <string name="login_fehler">Benutzername oder Passwort sind nicht korrekt!</string>
    <string name="student">Student</string>
    <string name="dozent">Dozent</string>
    <string name="studentenbereich">studentenbereich</string>
    <string name="dozentenbereich">dozentenbereich</string>
    <string name="gastbereich">gastbereich</string>
    <string name="besucher">Besucher</string>
    <string name="standort_wird_ermittelt">Standort wird ermittelt</string>
    <string name="intro_text">"Das Projekt Room Search ist eine Navigationsapplikation. Hier kannst du deinen Vorlesungsplan verwalten und dich zu Räumen der Beuth-Hochschule führen lassen. "</string>
    <string name="projekt_ersteller">Ein Projekt von Andreas Oettinger und Robert Neujahr</string>
    <string name="vorlesung_erstellen">Vorlesung erstellen</string>
    <string name="vorlesung_header">Vorlesung</string>
    <string name="vorlesung_beschreibung">Beschreibung zur Vorlesung</string>
    <string name="name_vorlesung">Name der Vorlesung</string>
    <string name="gebaude_raum">Gebäude und Raumnummer</string>
    <string name="vorlesung_zeit">Vorlesungszeit</string>
    <string name="beschreibung">Beschreibung</string>
    <string name="time_1">08:00 - 09:30</string>
    <string name="time_2">10:00 - 11:30</string>
    <string name="time_3">12:15 - 13:45</string>
    <string name="time_4">14:15 - 15:45</string>
    <string name="time_5">16:00 - 17:30</string>
    <string name="time_6">17:45 - 19:15</string>
    <string name="time_7">19:30 - 21:00</string>
    <string name="haus_a">A (Haus Beuth)</string>
    <string name="haus_b">B (Haus Gauß)</string>
    <string name="haus_c">C (Haus Grashof)</string>
    <string name="haus_d">D (Haus Bauwesen)</string>
    <string name="vorlesung_bearbeiten">markierte Vorlesung bearbeiten</string>
    <string name="vorlesung_entfernen">markierte Vorlesung entfernen</string>
    <string name="vorname">Vorname</string>
    <string name="nachname">Nachname</string>
    <string name="email">Email Adresse</string>
    <string name="passwort_wiederholen">Passwort wiederholen</string>
    <string name="rolle">Rolle</string>
    <string name="profil">Profil</string>
    <string name="vorlesungsplan">Vorlesungsplan</string>
    <string name="beenden">Beenden</string>
    <string name="create_plan">Vorlesungsplan erstellen</string>
    <string name="edit_plan">Vorlesungsplan bearbeiten</string>
    <string name="table_nutzer">Tabelle Nutzer</string>
    <string name="table_wochentag">Tabelle Wochentag</string>
    <string name="table_vorlesung">Tabelle Vorlesung</string>
    <string name="table_beschreibung">Tabelle Beschreibung</string>
    <string name="table_detail">Tabelle Detail</string>
    <string name="vorlesungszeit_vorhanden">Vorlesungszeit bereits besetzt!</string>
    <string name="freiblock_erstellen">Freiblock erstellen</string>
    <string name="freiblock">Freiblock</string>
    <string name="limit">Es können keine weiteren Vorlesungen erstellt werden!</string>

</resources>