<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/intro_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/title_activity_room_search"
        android:textColor="#fff"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/intro_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/intro_text"
        android:textColor="#fff"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="2"
        android:gravity="bottom|center"
        android:text="@string/projekt_ersteller"
        android:textColor="#fff" />

</LinearLayout>
