<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/table_header_nutzer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/table_nutzer" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/table_nutzer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="TextView" />

    </ScrollView>

    <TextView
        android:id="@+id/table_header_vorlesung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/table_vorlesung" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/table_vorlesung"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="TextView" />

    </ScrollView>

    <TextView
        android:id="@+id/table_header_beschreibung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/table_beschreibung" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/table_beschreibung"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="TextView" />

    </ScrollView>

    <TextView
        android:id="@+id/table_header_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/table_detail" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/table_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="TextView" />

    </ScrollView>

</LinearLayout>