<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back_ground">

    <TextView
        android:id="@+id/vorlesung_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#00979a"
        android:gravity="center"
        android:text="@string/vorlesung_erstellen"
        android:textColor="#fff"
        android:textSize="25dp" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="504dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/vorlesung_name_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="#9dd7d8"
                android:gravity="center"
                android:text="@string/vorlesung_header"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/vorlesung_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/name_vorlesung"
                android:textColor="#fff"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/editText_vorlesung_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#fff"
                android:ems="10"
                android:singleLine="true"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/vorlesung_raum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/gebaude_raum"
                android:textColor="#fff"
                android:textSize="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp" >

                <Spinner
                    android:id="@+id/spinner_vor_haus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#fff" />

                <EditText
                    android:id="@+id/editText_vor_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="2"
                    android:background="#fff"
                    android:ems="10"
                    android:singleLine="true"
                    android:textSize="25dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/zeitraum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/vorlesung_zeit"
                android:textColor="#fff"
                android:textSize="15dp" />

            <Spinner
                android:id="@+id/spinner_zeitraum"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="30dp"
                android:background="#fff" />

            <TextView
                android:id="@+id/beschreibung_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="#9dd7d8"
                android:gravity="center"
                android:text="@string/vorlesung_beschreibung"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/vorlesung_dozent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/beschreibung"
                android:textColor="#fff"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/editText_vorlesung_dozent"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="#fff"
                android:ems="10"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/button_vorlesung_erstellen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="Button" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>