<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/header_stundenplan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_vorlesung_hinzu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vorlesung_erstellen" />

        <Button
            android:id="@+id/button_vorlesung_freiblock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/freiblock_erstellen" />

        <Button
            android:id="@+id/button_vorlesung_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vorlesung_bearbeiten" />

        <Button
            android:id="@+id/button_vorlesung_entf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vorlesung_entfernen" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" >

        <Button
            android:id="@+id/button_st_back"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button" />

        <TextView
            android:id="@+id/st_wochentag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="TextView"
            android:textSize="20dp" />

        <Button
            android:id="@+id/button_st_vor"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" >

        <ViewFlipper
            android:id="@+id/viewFlipper_vorlesung_plan"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ListView
                android:id="@+id/listView_vorlesung_mo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

            </ListView>

            <ListView
                android:id="@+id/listView_vorlesung_di"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

            </ListView>

            <ListView
                android:id="@+id/listView_vorlesung_mi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

            </ListView>

            <ListView
                android:id="@+id/listView_vorlesung_do"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

            </ListView>

            <ListView
                android:id="@+id/listView_vorlesung_fr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </ListView>

        </ViewFlipper>

    </FrameLayout>

</LinearLayout>